docs: :memo: Add contact documentation
